kubernetes/apps/network/external-services/resources/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
spec:
  tls:
    - hosts:
        - hass.${PUBLIC_DOMAIN1}
      secretName: "${PUBLIC_DOMAIN1/./-}-production-tls"
    - hosts:
        - hass.${PUBLIC_DOMAIN2}
      secretName: "${PUBLIC_DOMAIN2/./-}-production-tls"
  rules:
    - host: hass.${PUBLIC_DOMAIN1}
      http:
        paths:
          - backend:
              service:
                name: homeassistant
                port:
                  number: 8123
            path: /
            pathType: Prefix
    - host: hass.${PUBLIC_DOMAIN2}
      http:
        paths:
          - backend:
              service:
                name: homeassistant
                port:
                  number: 8123
            path: /
            pathType: Prefix
